--- a/client/css/photo_stream.scss
+++ b/client/css/photo_stream.scss
@@ -7,7 +7,6 @@ $preview-subtext-font-size: 13px;
 .photo-stream-page {
 	width:100%;
 	height:100%;
-	margin-bottom: 20px;
 
 	.preview-list {
 		
